--- a/application/web/assets/MapbenderCoreBundle__sass__element__layertree__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__layertree__scss.css
@@ -1,65 +1,1 @@
-/* line 5, assetic_compassKBLI9D.scss */
-.mb-element-layertree .iconFolder {
-  display: none;
-  margin-right: 5px; }
-/* line 11, assetic_compassKBLI9D.scss */
-.mb-element-layertree .featureInfoWrapper {
-  width: 20px;
-  text-align: center; }
-/* line 16, assetic_compassKBLI9D.scss */
-.mb-element-layertree .serviceContainer, .mb-element-layertree .groupContainer {
-  border-left: dotted 1px black;
-  margin-bottom: 1px; }
-  /* line 22, assetic_compassKBLI9D.scss */
-  .mb-element-layertree .serviceContainer > .leaveContainer .iconFolder, .mb-element-layertree .groupContainer > .leaveContainer .iconFolder {
-    display: block; }
-  /* line 27, assetic_compassKBLI9D.scss */
-  .mb-element-layertree .serviceContainer .layers, .mb-element-layertree .groupContainer .layers {
-    display: none; }
-  /* line 28, assetic_compassKBLI9D.scss */
-  .mb-element-layertree .serviceContainer.showLeaves > .layers, .mb-element-layertree .groupContainer.showLeaves > .layers {
-    display: block; }
-  /* line 30, assetic_compassKBLI9D.scss */
-  .mb-element-layertree .serviceContainer .leave, .mb-element-layertree .groupContainer .leave {
-    margin-left: 20px;
-    position: relative; }
-    /* line 33, assetic_compassKBLI9D.scss */
-    .mb-element-layertree .serviceContainer .leave.invisible, .mb-element-layertree .groupContainer .leave.invisible {
-      filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=30);
-      opacity: 0.3; }
-    /* line 35, assetic_compassKBLI9D.scss */
-    .mb-element-layertree .serviceContainer .leave:before, .mb-element-layertree .groupContainer .leave:before {
-      content: '';
-      display: block;
-      height: 5px;
-      width: 5px;
-      border-top: dotted 1px black;
-      position: absolute;
-      top: 10px;
-      left: -15px; }
-  /* line 44, assetic_compassKBLI9D.scss */
-  .mb-element-layertree .serviceContainer .leaveContainer, .mb-element-layertree .groupContainer .leaveContainer {
-    margin-left: -6px;
-    margin-top: 1px; }
-/* line 49, assetic_compassKBLI9D.scss */
-.mb-element-layertree .checkWrapper {
-  position: relative; }
-/* line 51, assetic_compassKBLI9D.scss */
-.mb-element-layertree [data-state="loading"] {
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7; }
-  /* line 54, assetic_compassKBLI9D.scss */
-  .mb-element-layertree [data-state="loading"]:before {
-    -webkit-animation: spin 1s linear infinite;
-    -moz-animation: spin 1s linear infinite;
-    animation: spin 1s linear infinite;
-    position: absolute;
-    right: 40px; }
-/* line 63, assetic_compassKBLI9D.scss */
-.mb-element-layertree [data-state="error"] .layer-title {
-  color: #aa2323 !important; }
-/* line 64, assetic_compassKBLI9D.scss */
-.mb-element-layertree [data-state="error"]:before {
-  color: #aa2323;
-  position: absolute;
-  right: 40px; }
+.mb-element-layertree .iconFolder{display:none;margin-right:5px}.mb-element-layertree .featureInfoWrapper{width:20px;text-align:center}.mb-element-layertree .serviceContainer,.mb-element-layertree .groupContainer{border-left:dotted 1px black;margin-bottom:1px}.mb-element-layertree .serviceContainer>.leaveContainer .iconFolder,.mb-element-layertree .groupContainer>.leaveContainer .iconFolder{display:block}.mb-element-layertree .serviceContainer .layers,.mb-element-layertree .groupContainer .layers{display:none}.mb-element-layertree .serviceContainer.showLeaves>.layers,.mb-element-layertree .groupContainer.showLeaves>.layers{display:block}.mb-element-layertree .serviceContainer .leave,.mb-element-layertree .groupContainer .leave{margin-left:20px;position:relative}.mb-element-layertree .serviceContainer .leave.invisible,.mb-element-layertree .groupContainer .leave.invisible{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=30);opacity:0.3}.mb-element-layertree .serviceContainer .leave:before,.mb-element-layertree .groupContainer .leave:before{content:'';display:block;height:5px;width:5px;border-top:dotted 1px black;position:absolute;top:10px;left:-15px}.mb-element-layertree .serviceContainer .leaveContainer,.mb-element-layertree .groupContainer .leaveContainer{margin-left:-6px;margin-top:1px}.mb-element-layertree .checkWrapper{position:relative}.mb-element-layertree [data-state="loading"]{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=70);opacity:0.7}.mb-element-layertree [data-state="loading"]:before{-webkit-animation:spin 1s linear infinite;-moz-animation:spin 1s linear infinite;animation:spin 1s linear infinite;position:absolute;right:40px}.mb-element-layertree [data-state="error"] .layer-title{color:#aa2323 !important}.mb-element-layertree [data-state="error"]:before{color:#aa2323;position:absolute;right:40px}.layer-menu-btn{position:relative}.layer-menu{position:absolute;background-color:white;padding:10px;margin-top:10px;margin-left:-5px;z-index:20;min-width:120px;max-width:200px;border:solid 1px #a2a2a2;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px}.layer-menu:before{content:'';display:block;width:0;height:0;border-bottom:10px solid #404040;border-left:10px solid transparent;border-right:10px solid transparent;position:absolute;top:-10px;left:0}.layer-opacity-bar{position:relative;color:#fff;height:5px;background-color:#a2a2a2;width:100px;margin-bottom:20px;-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px}.layer-opacity-handle{position:absolute;top:-5px;left:0;cursor:pointer;width:30px;height:16px;line-height:16px;background-color:#6fb536;font-size:12px;text-align:center;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px}
