--- a/application/web/assets/MapbenderCoreBundle__sass__element__printclient__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__printclient__scss.css
@@ -1,12 +1,1 @@
-/* line 4, assetic_compass2SHHbA.scss */
-.mb-element-printclient {
-  display: none;
-  overflow: visible; }
-  /* line 8, assetic_compass2SHHbA.scss */
-  .mb-element-printclient .labelInput {
-    width: 60px; }
-  /* line 9, assetic_compass2SHHbA.scss */
-  .mb-element-printclient .input, .mb-element-printclient .dropdown {
-    width: 190px;
-    margin-bottom: 10px;
-    min-width: 0px; }
+.mb-element-printclient{display:none;overflow:visible}.mb-element-printclient .labelInput{width:60px}.mb-element-printclient .input,.mb-element-printclient .dropdown{min-width:190px;margin-bottom:10px}
