--- a/application/web/assets/MapbenderCoreBundle__sass__element__activityindicator__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__activityindicator__scss.css
@@ -1,10 +1,1 @@
-/* line 4, assetic_compassEV1H1F.scss */
-.mb-element-activityindicator {
-  display: none; }
-
-/* line 6, assetic_compassEV1H1F.scss */
-.mb-activity .mb-element-activityindicator, .mb-activity-ajax .mb-element-activityindicator {
-  display: inline-block;
-  -webkit-animation: spin 1s linear infinite;
-  -moz-animation: spin 1s linear infinite;
-  animation: spin 1s linear infinite; }
+.mb-element-activityindicator{display:none}.mb-activity .mb-element-activityindicator,.mb-activity-ajax .mb-element-activityindicator{display:inline-block;-webkit-animation:spin 1s linear infinite;-moz-animation:spin 1s linear infinite;animation:spin 1s linear infinite}
