--- a/application/web/assets/MapbenderCoreBundle__sass__element__map__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__map__scss.css
@@ -1,11 +1,1 @@
-/* line 5, assetic_compassaB0Tjy.scss */
-.contentPane .mb-element-map {
-  background-color: #f9f9f9;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; }
+.contentPane .mb-element-map{background-color:#f9f9f9;width:100%;height:100%;z-index:1;position:absolute;top:0;right:0;bottom:0;left:0}
