--- a/application/web/assets/MapbenderCoreBundle__sass__element__scalebar__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__scalebar__scss.css
@@ -1,23 +1,1 @@
-/* line 4, assetic_compassNPgX0D.scss */
-.mb-element-scaleline {
-  text-align: center;
-  display: inline-block; }
-  /* line 7, assetic_compassNPgX0D.scss */
-  .mb-element-scaleline .scaleBorder {
-    border-left: solid 2px #404040;
-    border-right: solid 2px #404040;
-    border-bottom: solid 2px #404040;
-    height: 5px;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    left: 0; }
-
-/* line 19, assetic_compassNPgX0D.scss */
-.toolBar .mb-element-scaleline {
-  position: relative;
-  bottom: 5px;
-  padding-bottom: 5px; }
-  /* line 23, assetic_compassNPgX0D.scss */
-  .toolBar .mb-element-scaleline .scaleBorder {
-    border-color: white; }
+.mb-element-scaleline{text-align:center;display:inline-block}.mb-element-scaleline .scaleBorder{border-left:solid 2px #404040;border-right:solid 2px #404040;border-bottom:solid 2px #404040;height:5px;position:absolute;right:0;bottom:0;left:0}.toolBar .mb-element-scaleline{position:relative;bottom:5px;padding-bottom:5px}.toolBar .mb-element-scaleline .scaleBorder{border-color:#fff}
