--- a/application/web/assets/MapbenderCoreBundle__sass__element__zoombar__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__zoombar__scss.css
@@ -1,129 +1,1 @@
-/* line 5, assetic_compassc51W20.scss */
-.mb-element-zoombar.iconMove:before {
-  position: absolute;
-  top: -20px;
-  right: 0; }
-
-/* line 9, assetic_compassc51W20.scss */
-.pan {
-  height: 49px;
-  width: 49px;
-  position: relative;
-  -webkit-border-radius: 50% 50%;
-  -moz-border-radius: 50% / 50%;
-  border-radius: 50% / 50%;
-  color: white;
-  background-color: #606060;
-  background-color: rgba(0, 0, 0, 0.8); }
-  /* line 57, ../home/cwygoda/Workspace/Coding/mapbender-starter2/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss */
-  .pan [class^="icon"], .pan [class*=" icon"] {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-    opacity: 0.7;
-    -webkit-transition: opacity 0.2s ease-in-out;
-    -moz-transition: opacity 0.2s ease-in-out;
-    -o-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out; }
-    /* line 60, ../home/cwygoda/Workspace/Coding/mapbender-starter2/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss */
-    .pan [class^="icon"]:hover, .pan [class*=" icon"]:hover {
-      filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-      opacity: 1; }
-  /* line 16, assetic_compassc51W20.scss */
-  .pan .iconTop {
-    position: absolute;
-    top: 1px;
-    left: 18px; }
-  /* line 17, assetic_compassc51W20.scss */
-  .pan .iconRight {
-    position: absolute;
-    top: 15px;
-    right: 6px; }
-  /* line 18, assetic_compassc51W20.scss */
-  .pan .iconDown {
-    position: absolute;
-    bottom: 1px;
-    left: 18px; }
-  /* line 19, assetic_compassc51W20.scss */
-  .pan .iconLeft {
-    position: absolute;
-    top: 15px;
-    left: 7px; }
-
-/* line 21, assetic_compassc51W20.scss */
-.toolPane {
-  margin: 10px 5px 0px 5px;
-  padding: 5px 0px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  color: white;
-  background-color: #606060;
-  background-color: rgba(0, 0, 0, 0.8); }
-  /* line 57, ../home/cwygoda/Workspace/Coding/mapbender-starter2/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss */
-  .toolPane [class^="icon"], .toolPane [class*=" icon"] {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-    opacity: 0.7;
-    -webkit-transition: opacity 0.2s ease-in-out;
-    -moz-transition: opacity 0.2s ease-in-out;
-    -o-transition: opacity 0.2s ease-in-out;
-    transition: opacity 0.2s ease-in-out; }
-    /* line 60, ../home/cwygoda/Workspace/Coding/mapbender-starter2/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss */
-    .toolPane [class^="icon"]:hover, .toolPane [class*=" icon"]:hover {
-      filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-      opacity: 1; }
-  /* line 27, assetic_compassc51W20.scss */
-  .toolPane > li {
-    margin: 3px 0; }
-
-/* line 29, assetic_compassc51W20.scss */
-.historyPrev, .historyNext {
-  margin-left: 5px; }
-
-/* line 30, assetic_compassc51W20.scss */
-.zoomBox {
-  text-align: center; }
-  /* line 33, assetic_compassc51W20.scss */
-  .zoomBox.activeZoomIcon .iconZoom {
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity: 1; }
-
-/* line 36, assetic_compassc51W20.scss */
-.zoomWorld, .zoomSlider {
-  text-align: center; }
-
-/* line 37, assetic_compassc51W20.scss */
-.zoomSliderLevels {
-  margin: 0px; }
-
-/* line 38, assetic_compassc51W20.scss */
-.iconZoomLevel {
-  font-size: 10px;
-  line-height: 10px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  display: block; }
-
-/* line 45, assetic_compassc51W20.scss */
-.iconZoomOut, .iconZoomLevel {
-  position: relative;
-  display: block; }
-
-/* line 50, assetic_compassc51W20.scss */
-.iconZoomLevel:not(:first-child):after {
-  content: '';
-  height: 7px;
-  border-left: dotted 1px white;
-  position: absolute;
-  top: -8px;
-  left: 19px; }
-
-/* line 59, assetic_compassc51W20.scss */
-.olMapViewport.MapbenderControlZoomBoxActive {
-  cursor: crosshair; }
-/* line 60, assetic_compassc51W20.scss */
-.olMapViewport .olHandlerBoxZoomBox {
-  border: 2px solid #404040;
-  background-color: white;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
-  opacity: 0.8; }
+.mb-element-zoombar.iconMove:before{position:absolute;top:-20px;right:0}.pan{height:49px;width:49px;position:relative;-webkit-border-radius:50% 50%;-moz-border-radius:50% / 50%;border-radius:50% / 50%;color:#fff;background-color:#606060;background-color:rgba(0,0,0,0.8)}.pan [class^="icon"],.pan [class*=" icon"]{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=70);opacity:0.7;-webkit-transition:opacity 0.2s ease-in-out;-moz-transition:opacity 0.2s ease-in-out;-o-transition:opacity 0.2s ease-in-out;transition:opacity 0.2s ease-in-out}.pan [class^="icon"]:hover,.pan [class*=" icon"]:hover{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);opacity:1}.pan .iconTop{position:absolute;top:1px;left:18px}.pan .iconRight{position:absolute;top:15px;right:6px}.pan .iconDown{position:absolute;bottom:1px;left:18px}.pan .iconLeft{position:absolute;top:15px;left:7px}.toolPane{margin:10px 5px 0px 5px;padding:5px 0px;-webkit-border-radius:3px;-moz-border-radius:3px;-ms-border-radius:3px;-o-border-radius:3px;border-radius:3px;color:#fff;background-color:#606060;background-color:rgba(0,0,0,0.8)}.toolPane [class^="icon"],.toolPane [class*=" icon"]{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=70);opacity:0.7;-webkit-transition:opacity 0.2s ease-in-out;-moz-transition:opacity 0.2s ease-in-out;-o-transition:opacity 0.2s ease-in-out;transition:opacity 0.2s ease-in-out}.toolPane [class^="icon"]:hover,.toolPane [class*=" icon"]:hover{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);opacity:1}.toolPane>li{margin:3px 0}.historyPrev,.historyNext{margin-left:5px}.zoomBox{text-align:center}.zoomBox.activeZoomIcon .iconZoom{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);opacity:1}.zoomWorld,.zoomSlider{text-align:center}.zoomSliderLevels{margin:0px}.iconZoomLevel{font-size:10px;line-height:10px;margin-top:5px;margin-bottom:10px;display:block}.iconZoomOut,.iconZoomLevel{position:relative;display:block}.iconZoomLevel:not(:first-child):after{content:'';height:7px;border-left:dotted 1px white;position:absolute;top:-8px;left:19px}.olMapViewport.MapbenderControlZoomBoxActive{cursor:crosshair}.olMapViewport .olHandlerBoxZoomBox{border:2px solid #404040;background-color:white;filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=80);opacity:0.8}
