--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/basesourceswitcher.html.twig
@@ -1,4 +1,4 @@
-<div class="elementForm defaultForm">
+<div class="elementForm defaultForm elementFormBaseSourceSwitcher">
   <div class="clearContainer"></div>
   {{ form_label(form.title) }}{{ form_widget(form.title) }}
   <div class="clearContainer"></div>
