--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/about_dialog.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/about_dialog.scss
@@ -1,4 +1,6 @@
 @import "libs/variables";
 @import "libs/mixins";
+@import "modules/button";
+@import "modules/text";
 
 .sideContent .mb-aboutButton, {@extend .button;}
