--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/coordinatesdisplay.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/coordinatesdisplay.scss
@@ -10,6 +10,6 @@
 .contentPane{
   .mb-element-coordsdisplay{
     z-index: 20;
-    @include pos('',$space,$space*2,'');
+    @include absolute('' $space $space*2 '');
   }
 }
