--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/printclient.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/printclient.scss
@@ -12,7 +12,7 @@
       width:25px;
       margin-right:$space/2;
     }
-    .input{
+    .inputWrapper{
       width:90px;
       &:first-child{margin-right:$space/2;}
     }
