--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/zoombar.scss
@@ -13,10 +13,10 @@
   @include border-radius(50%,50%);
   @include frontendContainerStyle();
 
-  .iconTop{@include pos(1px,'','',18px);}
-  .iconRight{@include pos(15px,6px,'','');}
-  .iconDown{@include pos('','',1px,18px);}
-  .iconLeft{@include pos(15px,'','',7px);}
+  .iconTop{@include absolute(1px '' '' 18px);}
+  .iconRight{@include absolute(15px 6px '' '');}
+  .iconDown{@include absolute('' '' 1px 18px);}
+  .iconLeft{@include absolute(15px '' '' 7px);}
 }
 .toolPane{
   margin:$space/2 5px 0px 5px;
@@ -40,7 +40,7 @@
   line-height:10px;
   margin-top:5px;
   margin-bottom:10px;
-  display: block;
+  display: block !important;
 }
 .iconZoomOut, .iconZoomLevel{
   position: relative;
@@ -51,7 +51,7 @@
     content:'';
     height:7px;
     border-left:dotted 1px white;
-    @include pos(-8px,'','',19px);
+    @include absolute(-8px '' '' 19px);
   }
 }
 
