--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -45,6 +45,7 @@
           <div class="left">
         {{ form_widget(form.visible) }}<label for="{{form.visible.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.repo.instance.label.visible"|trans}}</label>
         </div>
+        <div class="clear"></div>
         <div class="left">
         {{ form_widget(form.basesource) }}<label for="{{form.basesource.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.repo.instance.label.basesource"|trans}}</label>
         </div>
