--- a/application/web/assets/MapbenderCoreBundle__sass__element__poi__scss.css
+++ b/application/web/assets/MapbenderCoreBundle__sass__element__poi__scss.css
@@ -1,133 +1,1 @@
-/* line 1, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-.input, .mb-poi-popup textarea {
-  color: #858585;
-  border: solid 1px #c8c8c8;
-  line-height: 21px;
-  height: 28px;
-  padding-left: 5px;
-  padding-right: 5px;
-  background-color: #f9f9f9; }
-  /* line 10, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-  .input:focus, .mb-poi-popup textarea:focus {
-    outline: none;
-    border: 1px solid #8dce55; }
-
-/* line 17, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-.inputWrapper {
-  position: relative;
-  display: inline-block; }
-  /* line 21, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-  .inputWrapper .validationMsgBox {
-    position: absolute;
-    z-index: 9999;
-    min-width: 260px;
-    margin-left: -10px;
-    color: #aa2323;
-    padding: 3px 10px 2px 10px;
-    background-color: #f6d6d6;
-    border: solid 1px #eeabab;
-    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
-    opacity: 1;
-    -webkit-transition: all 0.8s ease-in-out;
-    -moz-transition: all 0.8s ease-in-out;
-    -o-transition: all 0.8s ease-in-out;
-    transition: all 0.8s ease-in-out; }
-    /* line 34, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-    .inputWrapper .validationMsgBox.hide {
-      filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-      opacity: 0;
-      margin-left: 0px; }
-    /* line 40, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-    .inputWrapper .validationMsgBox:after, .inputWrapper .validationMsgBox:before {
-      border: solid transparent;
-      content: "";
-      height: 0;
-      width: 0;
-      position: absolute;
-      right: 100%; }
-    /* line 47, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-    .inputWrapper .validationMsgBox:after {
-      border-right-color: #f6d6d6;
-      border-width: 3px;
-      top: 14px;
-      margin-top: -3px; }
-    /* line 53, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_input.scss */
-    .inputWrapper .validationMsgBox:before {
-      border-right-color: #eeabab;
-      border-width: 5px;
-      top: 14px;
-      margin-top: -5px; }
-
-/* line 1, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.italic {
-  font-style: italic; }
-
-/* line 2, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.smallerText {
-  font-size: 10px; }
-
-/* line 3, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.smallText, .input, .mb-poi-popup textarea, .labelInput, .labelText, .labelCheck, .description {
-  font-size: 12px; }
-
-/* line 4, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.bigText, .title {
-  font-size: 16px; }
-
-/* line 5, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.biggerText, .contentTitle {
-  font-size: 22px; }
-
-/* line 6, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.contentTitle {
-  font-weight: normal;
-  font-style: italic;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: dashed 1px #b3b3b3; }
-
-/* line 15, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.title {
-  font-weight: normal;
-  color: #3f3f3f; }
-
-/* line 20, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.subTitle {
-  font-size: 14px;
-  color: #5b932a; }
-
-/* line 24, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.labelInput, .labelText, .labelCheck {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
-/* line 28, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.labelInput {
-  display: inline-block;
-  color: #707070;
-  margin-right: 10px;
-  line-height: 29px; }
-  /* line 34, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-  .labelInput .required {
-    color: #aa2323; }
-
-/* line 38, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.labelCheck {
-  color: #707070;
-  margin-left: 5px; }
-
-/* line 42, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.labelText {
-  color: #5b932a; }
-
-/* line 43, ../home/vhermann/projects/mapbender-starter/application/mapbender/src/Mapbender/CoreBundle/Resources/public/sass/modules/_text.scss */
-.description {
-  color: #707070;
-  font-style: italic; }
-
-/* line 6, assetic_compassogIN7L.scss */
-.mb-poi-popup textarea {
-  width: 100%;
-  height: 90px; }
+.input,.mb-poi-popup textarea{color:#858585;border:solid 1px #c8c8c8;line-height:21px;height:28px;padding-left:5px;padding-right:5px;background-color:#f9f9f9}.input:focus,.mb-poi-popup textarea:focus{outline:none;border:1px solid #8dce55}.inputWrapper{position:relative;display:inline-block}.inputWrapper .validationMsgBox{position:absolute;z-index:9999;min-width:260px;margin-left:-10px;color:#aa2323;padding:3px 10px 2px 10px;background-color:#f6d6d6;border:solid 1px #eeabab;filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100);opacity:1;-webkit-transition:all 0.8s ease-in-out;-moz-transition:all 0.8s ease-in-out;-o-transition:all 0.8s ease-in-out;transition:all 0.8s ease-in-out}.inputWrapper .validationMsgBox.hide{filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=0);opacity:0;margin-left:0px}.inputWrapper .validationMsgBox:after,.inputWrapper .validationMsgBox:before{border:solid transparent;content:"";height:0;width:0;position:absolute;right:100%}.inputWrapper .validationMsgBox:after{border-right-color:#f6d6d6;border-width:3px;top:14px;margin-top:-3px}.inputWrapper .validationMsgBox:before{border-right-color:#eeabab;border-width:5px;top:14px;margin-top:-5px}.italic{font-style:italic}.smallerText{font-size:10px}.smallText,.input,.mb-poi-popup textarea,.labelInput,.labelText,.labelCheck,.description{font-size:12px}.bigText,.title{font-size:16px}.biggerText,.contentTitle{font-size:22px}.contentTitle{font-weight:normal;font-style:italic;margin-bottom:20px;padding-bottom:10px;border-bottom:dashed 1px #b3b3b3}.title{font-weight:normal;color:#3f3f3f}.subTitle{font-size:14px;color:#5b932a}.labelInput,.labelText,.labelCheck{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.labelInput{display:inline-block;color:#707070;margin-right:10px;line-height:29px}.labelInput .required{color:#aa2323}.labelCheck{color:#707070;margin-left:5px}.labelText{color:#5b932a}.description{color:#707070;font-style:italic}.mb-poi-popup textarea{width:100%;height:90px}
