--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
@@ -1,4 +1,4 @@
-<div class="elementForm">
+<div class="elementForm elementFormSimpleSearch">
     {{ form_label(form.title) }}{{ form_widget(form.title) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.query_url) }}{{ form_widget(form.configuration.query_url) }}
