--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -24,6 +24,7 @@
     "bundles/mapbendermanager/sass/element/search_router.scss"
     "bundles/mapbendermanager/sass/element/zoombar.scss"
     "bundles/mapbendermanager/sass/element/basesourceswitcher.scss"
+    "bundles/mapbendermanager/sass/element/simplesearch.scss"
   %}
     <link rel="stylesheet" href="{{ asset_url }}" />
   {% endstylesheets %}
