--- a/src/Mapbender/ManagerBundle/Resources/public/sass/element/printclient.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/element/printclient.scss
@@ -12,9 +12,7 @@
       width:25px;
       margin-right:$space/2;
     }
-    .inputWrapper{
-      width:90px;
-      &:first-child{margin-right:$space/2;}
-    }
+    .left:first-child{margin-right: $space;}
+    .inputWrapper{width:120px;}
   }
 }
