--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_icons.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'FontAwesome'; //v.3.0.1
-  src: url($iconBasePath + '/fontawesome-webfont.eot');
-  src: url($iconBasePath + '/fontawesome-webfont.eot') format("embedded-opentype"),
-    url($iconBasePath + '/fontawesome-webfont.woff') format("woff"),
-    url($iconBasePath + '/fontawesome-webfont.ttf') format("truetype");
+  src: url($iconBasePath + '/fontawesome-webfont.eot?');
+  src: url($iconBasePath + '/fontawesome-webfont.eot?') format("embedded-opentype"),
+    url($iconBasePath + '/fontawesome-webfont.woff?') format("woff"),
+    url($iconBasePath + '/fontawesome-webfont.ttf?') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
