deletewmc hidden submit button added

--- a/src/Mapbender/WmcBundle/Resources/views/Wmc/deletewmc.html.twig
+++ b/src/Mapbender/WmcBundle/Resources/views/Wmc/deletewmc.html.twig
@@ -5,4 +5,5 @@
     {{ 'mb.wmc.wmc.delete_confirm' | trans ({'%wmc_title%': wmc_title,'%wmc_id%': wmc_id}) | raw }}
     </header>
     {{ form_widget(form) }}
+    <input type="submit" class="hidden"/>
 </form>
