Use listAssets in elements skeletons

--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/button.php.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/button.php.twig
@@ -19,7 +19,7 @@ class {{ className }} extends Element {
         return array();
     }
 
-    public function getAssets() {
+    static public function listAssets() {
         return array(
             'js' => array(
                 '../mapbendercore/mapbender.element.button.js',
