--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/general.php.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/general.php.twig
@@ -19,7 +19,7 @@ class {{ className }} extends Element {
         return array();
     }
 
-    public function getAssets() {
+    static public function listAssets() {
         return array(
             'js' => array(
                 'mapbender.element.{{ classNameLower }}.js'
