more skeleton adaptations
* added setup methods in .js skeletons where appropriate
* fixed other bundle asset references in php skeletons

--- a/src/Mapbender/CoreBundle/Resources/skeleton/element/button.php.twig
+++ b/src/Mapbender/CoreBundle/Resources/skeleton/element/button.php.twig
@@ -22,7 +22,7 @@ class {{ className }} extends Element {
     static public function listAssets() {
         return array(
             'js' => array(
-                '../mapbendercore/mapbender.element.button.js',
+                '@MapbenderCoreBundle/Resources/public/mapbender.element.button.js',
                 'mapbender.element.{{ classNameLower }}.js'
             ),
             'css' => array()
