--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss
@@ -53,10 +53,10 @@
   color:$lightFontColor;
   background-color:darken($contentColor, 60%); //IE8 & 9 fallback
   background-color:rgba(0,0,0,0.8);
+  border-radius: 4px;
 
   [class^="icon"],[class*=" icon"]{
     @include opacity(0.7);
-    @include transition(opacity .2s ease-in-out);
     &:hover{@include opacity(1);}
   }
 }
