--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -22,6 +22,7 @@
 
     // elements with childrens
     & > .leaveContainer{
+      position: relative;
       .iconFolder{display:block;}
       .layer-title{@extend .subTitle;}
     }
