--- a/src/Mapbender/WmsBundle/Resources/public/sass/element/wmsloader.scss
+++ b/src/Mapbender/WmsBundle/Resources/public/sass/element/wmsloader.scss
@@ -1,3 +1,8 @@
+@import "libs/variables";
+@import "libs/mixins";
+@import "modules/text";
+@import "modules/input";
+
 .mb-element-wmsloader{
   display: none;
   .input{width:340px;}
