--- a/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Element/wmsloader.html.twig
@@ -2,5 +2,7 @@
     <p class="description">{{ "mb.wms.wmsloader.dialog.label.example"|trans }}: http://wms.wheregroup.com/cgi-bin/germany.xml?VERSION=1.1.1&amp;REQUEST=GetCapabilities&amp;SERVICE=WMS</p>
     <br>
     <label class="labelInput" for="loadWmsUrl">{{ "mb.wms.wmsloader.dialog.label.wmsurl"|trans}}:</label>
-    <input name="loadWmsUrl" class="input url" type="text" />
+    <div class="inputWrapper">
+        <input name="loadWmsUrl" class="input url" type="text" />
+    </div>
 </div>
