--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -12,7 +12,7 @@
       </div>
       <span class="layer-title labelCheck"></span>
       {% if configuration.menu is defined and configuration.menu != null and configuration.menu | length > 0 %}
-      <span class="layer-menu-btn">
+      <span class="layer-menu-btn iconMenu">
         <div id="layer-menu" class="layer-menu hidden">
         {% for item in configuration.menu %}
           {% if item == 'opacity' %}
