--- a/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/select.html.twig
@@ -1,7 +1,7 @@
 {% if whitelist_exists is defined %}
     {% if whitelist_exists %}
         <div class="messageBox hint">
-            {{ "Only for this region available elements are displayed" | trans }}
+            {{ "Only for this region available elements are displayed." | trans }}
         </div>
     {% endif %}
 {% endif %}
